docker setup fixed. add persistent volume for postgres

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,6 @@
-Cargo.lock
-Cargo.toml
 Makefile
 build
 diesel.toml
 migrations
-scripts
-src
 test
-target/debug/deps
-target/debug/build
-target/debug/incremental
+target/**
