--- a/Rocket.example.toml
+++ b/Rocket.example.toml
@@ -1,5 +1,5 @@
 [global.databases]
-middleware = { url = "postgres://middleware:middleware@localhost/middleware" }
+middleware = { url = "postgres://middleware:middleware@db/middleware" }
 
 [development]
 address = "0.0.0.0"
