--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,15 +10,14 @@ COPY ./Cargo.toml ./Cargo.toml
 
 RUN cargo build --release
 RUN rm src/*.rs && rm -rf target/release/deps/aepp_middleware*
-COPY src/ ./src/
+COPY ./src/ ./src/
 RUN cargo build --release
 
 FROM debian:stretch-slim
 RUN apt-get update && apt-get -y install libpq5 libcurl3 libcurl3-gnutls
 COPY --from=build /aepp-middleware/target/release/aepp-middleware /app/aepp-middleware
 WORKDIR /app
-COPY ./Rocket.example.toml ./Rocket.toml
+COPY ./docker/Rocket.toml ./Rocket.toml
 ENTRYPOINT ["/app/aepp-middleware"]
 CMD ["-p", "-s"]
-EXPOSE 8000:8000
 EXPOSE 80:80
